<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Owntracks</string>
    <string name="preferencesServer">Connection</string>
    <string name="register">Register</string>
    <string name="hostMQTT">MQTT Host</string>
    <string name="preferencesRegisterHost">HTTP Host</string>
    <string name="preferencesHost">Host</string>
    <string name="preferencesPort">Port</string>
    <string name="preferencesWebsocket">Use WebSockets</string>
    <string name="preferencesUserUsername">Username</string>
    <string name="preferencesDeviceName">Device ID</string>
    <string name="preferencesBrokerPassword">Password</string>
    <string name="preferencesCaCrtPath">CA certificate</string>
    <string name="preferencesClientCrtPath">Client certificate</string>
    <string name="preferencesClientCrtPassword">Client certificate password</string>
    <string name="preferencesLicenses">Libraries</string>
    <string name="preferencesLicensesSummary">Thanks to the authors of included libraries</string>
    <string name="preferencesNotification">Notifications</string>
    <string name="preferencesNotificationEvents">Events</string>
    <string name="preferencesNotificationEventsSummary">Notify about received events</string>
    <string name="preferencesNotificationLocationSummary">Display last reported location and time</string>
    <string name="preferencesNotificationLocation">Last reported location</string>
    <string name="preferencesAdvanced">Advanced</string>
    <string name="preferencesVersion">Version</string>
    <string name="preferencesReporting">Reporting</string>
    <string name="preferencesTrackerId">Tracker ID</string>
    <string name="preferencesInfo">Information</string>
    <string name="preferencesRepository">Source Code</string>
    <string name="preferencesDocumentation">Documentation</string>
    <string name="preferencesTwitter" translatable="false">Twitter</string>
    <string name="preferencesEncryptionKeySummary">Symmetric key for payload encryption </string>
    <string name="preferencesEncryptionKey">Encryption Key</string>
    <string name="preferencesEncryptionKeyDialogMessage">Encryption key is cut off after 32 characters.</string>
    <string name="na">Not available</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="preferencesCleanSessionEnabled">Clean Session</string>
    <string name="publish">Report</string>
    <string name="preferencesPubExtendedDataSummary">Include extended data in location reports</string>
    <string name="preferencesPubExtendedData">Extended data</string>
    <string name="preferencesAutostartSummary">Automatically start on device boot</string>
    <string name="preferencesAutostart">Autostart</string>
    <string name="preferencesRemoteCommand">Remote commands</string>
    <string name="preferencesRemoteCommandSummary">Enable remote commands</string>
    <string name="preferencesGeocode">Geocode</string>
    <string name="preferencesGeocodeSummary">Enable geocoding. Requires restart.</string>
    <string name="description">Description</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="radius">Radius</string>
    <string name="addWaypoint">Add waypoint</string>
    <string name="exportConfiguration">Export</string>
    <string name="contactLocationUnknown">No location is available</string>
    <string name="menuContactNavigate">Navigate</string>
    <string name="menuCurrentLoction">Current location</string>
    <string name="menuImportQRCode">Import QR Code</string>
    <string name="contactDetailsDuration">Duration (minutes)</string>
    <string name="fieldNameSelectedEntrance">FieldName of entrance</string>
    <string name="waypointListPlaceholder">No regions defined yet</string>
    <string name="importConfig">Import</string>
    <string name="tls" translatable="false">TLS</string>
    <string name="preferencesSecurity">Security</string>
    <string name="accept">Accept</string>
    <string name="preferencesIdentification">Identification</string>
    <string name="preferencesParameters">Parameters</string>
    <string name="preferencesKeepalive">Keepalive</string>
    <string name="preferencesKeepaliveValidationError" formatted="true">Keepalive should be a minimum of %d</string>
    <string name="seconds">Seconds</string>
    <string name="preferencesProfileId">Mode</string>
    <string name="mode_mqtt_private_label">MQTT</string>
    <string name="aLocation">a region</string>
    <string name="events">Events</string>
    <string name="title_activity_regions">Regions</string>
    <string name="title_activity_region">Region</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_contacts">Friends</string>
    <string name="title_activity_parkplatz">Import QR Code</string>
    <string name="title_activity_lastqrcodes">History</string>
    <string name="title_activity_invite">Invite</string>
    <string name="title_activity_connection_login">Login &amp; Connection</string>
    <string name="title_activity_register">Register new account</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_exit">Exit app</string>
    <string name="unableToCopyCertificate">Unable to copy certificate to internal storage</string>
    <string name="preferencesCategoryNotificationOngoing">Ongoing notification</string>
    <string name="preferencesCategoryNotificationBackground">Background notifications</string>
    <string name="preferencesCategoryAdvancedServices">Services</string>
    <string name="preferencesCategoryAdvancedLocator">Locator</string>
    <string name="preferencesCategoryAdvancedEncryption">Encryption</string>
    <string name="preferencesCategoryAdvancedMisc">Misc</string>
    <string name="keyIDSelectedEntrance" translatable="false">KeyID of entrance</string>
    <string name="exportWaypointsToEndpoint">Publish Waypoints</string>
    <string name="preferencesExportFailed">Preferences export failed</string>
    <string name="preferencesExportSuccess">Export successful</string>
    <string name="welcomeFixIssue">Fix</string>
    <string name="play_services_now_available">Google Play Services are now available</string>
    <string name="play_services_not_available">Google Play Services are not available</string>
    <string name="play_services_update_required">Google Play Services update is required</string>
    <string name="preferencesUrl" translatable="false">URL</string>
    <string name="mode_http_private_label">HTTP</string>
    <string name="transitionEntering">enters</string>
    <string name="transitionLeaving">leaves</string>
    <string name="errorPreferencesImportFailed">Import failed</string>
    <string name="welcome_play_heading">Google Play Services</string>
    <string name="welcome_play_description">Owntracks requires Google Play Services</string>
    <string name="icon_description_warning">Warning</string>
    <string name="welcome_heading">Welcome</string>
    <string name="welcome_description">The following steps will help you to get started with Owntracks</string>
    <string name="mode_heading">Mode</string>
    <string name="permissions_heading">Permissions</string>
    <string name="permissions_description">Owntracks requires access to your location. Please grant this permission before continuing.</string>
    <string name="permissions_granted">Permissions have been granted</string>
    <string name="icon_description_owntracks">Owntracks</string>
    <string name="enjoy_description">Select preferences from the menu and configure OwnTracks for your server before using it</string>
    <string name="done_heading">Done</string>
    <string name="icon_description_done">Done</string>
    <string name="title_activity_load">Import</string>
    <string name="errorPreferencesImportFailedParseException">unable to parse file</string>
    <string name="preferencesIgnoreInaccurateLocations">Inaccurate locations</string>
    <string name="preferencesIgnoreInaccurateLocationsSummary">Ignore inaccurate locations</string>
    <string name="preferencesIgnoreInaccurateLocationsDialog">Ignore location, if the accuracy is greater than the given meters</string>
    <string name="preferencesLocatorInterval">Location interval</string>
    <string name="preferencesLocatorIntervalSummary">Interval between location updates</string>
    <string name="preferencesLocatorIntervalDialog">How often should locations be requested from the device (seconds)</string>
    <string name="preferencesMoveModeLocatorInterval">Location interval (Move mode)</string>
    <string name="preferencesMoveModeLocatorIntervalSummary">Interval between location updates in Move mode</string>
    <string name="preferencesMoveModeLocatorIntervalDialog">How often should locations be requested from the device whilst in Move mode (seconds)</string>
    <string name="errorPreferencesImportFailedMemory">Your device ran out of memory</string>
    <string name="noNavigationApp">no suitable app installed</string>
    <string name="menuClear">Clear</string>
    <string name="configurationManagement">Configuration management</string>
    <string name="preferencesEditor">Editor</string>
    <string name="preferencesEditorKeyError">Invalid key specified</string>
    <string name="preferencesEditorValueError">Invalid value specified</string>
    <string name="preferencesEditorDescription">Set a single value for the specified key. Some changes might require an restart of the app.</string>
    <string name="preferencesLoadFailed">Unable to load effective configuration</string>
    <string name="preferencesEditorKey">Key</string>
    <string name="preferencesEditorValue">Value</string>
    <string name="restart">Restart</string>
    <plurals name="notificationEventsTitle">
        <item quantity="one">%1$d new event</item>
        <item quantity="other">%1$d new events</item>
    </plurals>
    <string name="ui_fragment_welcome_version_title">Restrictions</string>
    <string name="ui_fragment_welcome_version_description">Due to OS limitations, some features might work in a restricted manner. \n\n A permanent notification will be shown to keep running in the background. It can be disabled in the systems notification preferences. </string>
    <string name="ui_fragment_welcome_version_learn_more">Learn more</string>
    <string name="INITIAL" tools:ignore="UnusedResources">Initializing</string>
    <string name="IDLE" tools:ignore="UnusedResources">Idle</string>
    <string name="CONNECTING" tools:ignore="UnusedResources">Connecting</string>
    <string name="CONNECTED" tools:ignore="UnusedResources">Connected</string>
    <string name="DISCONNECTING" tools:ignore="UnusedResources">Disconnecting</string>
    <string name="DISCONNECTED" tools:ignore="UnusedResources">Disconnected</string>
    <string name="DISCONNECTED_USERDISCONNECT" tools:ignore="UnusedResources">Disconnected</string>
    <string name="ERROR" tools:ignore="UnusedResources">Error</string>
    <string name="distance_label">Distance (meter)</string>
    <string name="preferencesUsername">Username</string>
    <string name="preferencesPassword">Password</string>
    <string name="preferencesRepeatPassword">Confirm Password</string>
    <string name="preferencesEmail">Email</string>
    <string name="preferencesCertificatePassword">Certificate Password</string>
    <string name="show_options">Show options</string>
    <string name="btn_invite">Send invite</string>
    <string name="btn_get_keyID_fieldName">Get Parking Info</string>
    <string name="keyIDInvite">KeyID of parking spots:</string>
    <string name="fieldNameInvite">FieldName of parking spot:</string>
    <string name="selectTimeInvite">Select time</string>
    <string name="inputInviteEmail">Invited email</string>
</resources>