<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="vm" type="org.owntracks.android.ui.invite.InviteViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnGetKeyIDFieldName"
                android:layout_width="157dp"
                android:layout_height="62dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="581dp"
                android:layout_marginBottom="88dp"
                android:text="@string/btn_get_keyID_fieldName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSendInvite"
                android:layout_width="157dp"
                android:layout_height="62dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="581dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="88dp"
                android:text="@string/btn_invite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnGetKeyIDFieldName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/keyIDInviteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="89dp"
                android:layout_marginBottom="15dp"
                android:text="@string/keyIDInvite"
                app:layout_constraintBottom_toTopOf="@+id/spinnerKeyID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerKeyID"
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/keyIDInviteText" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmailInviteText" />

            <TextView
                android:id="@+id/inputEmailInviteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:text="@string/inputInviteEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

            <TextView
                android:id="@+id/fieldNameInviteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:text="@string/fieldNameInvite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerKeyID" />

            <Spinner
                android:id="@+id/spinnerFieldName"
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldNameInviteText" />

            <TextView
                android:id="@+id/selectDateInviteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:text="@string/selectDayInvite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerFieldName" />

            <EditText
                android:id="@+id/editInviteDate"
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectDateInviteText" />

            <TextView
                android:id="@+id/selectTimeInviteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:text="@string/selectTimeInvite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editInviteDate" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="335dp"
                android:layout_height="40dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectTimeInviteText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>